--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,171 @@
-body {
+
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #959DA0;
+}
+
+li {
+  list-style-type: none;
+}
+
+button {
+  border: none;
+  outline: none;
+}
+
+input {
+  border: 0;
+  outline: none;
+}
+
+.container {
+  width: 700px;
+  padding: 20px 25px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  border-radius: 5px;
+}
+
+.container h1 {
+  font-size: 36px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.add__form {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.add__form input {
+  width: 100%;
+  border: 1px solid #959DA0;
+  border-radius: 5px;
+  padding: 15px;
+}
+
+.add {
+  margin-left: 10px;
+  border-radius: 5px;
+  border: 2px solid #959DA0;
+}
+
+.add img {
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+}
+
+li {
+  border: 1px solid #959DA0;
+  padding: 10px;
+  background-color: #F3F1F4;
+  border-radius: 5px;
+  width: 100%;
+  margin-right: 10px;
+
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px;
+  margin-top: 15px;
+}
+
+.clear {
+  padding: 15px;
+  color: #6A7495;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  border: 1px solid #959DA0;
+  border-radius: 5px;
+}
+
+.li__item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.li__item img {
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+}
+
+.li__item button {
+  border-radius: 5px;
+  border: 2px solid #959DA0;
+  margin-left: 10px;
+}
+
+.li__item input {
+  margin-right: 15px;
+}
+
+.list {
+  display: flex;
+  align-items: center;
+  border: 1px solid #959DA0;
+  border-radius: 5px;
+  padding: 10px;
+  width: 100%;
+}
+
+.list p {
+  width: 100%;
+}
+
+.count {
+  color: red;
+}
+
+.done {
+  text-decoration: line-through;
+}
+
+.edit {
+  width: 40px;
+  margin-right: 20px;
+}
+
+.edit button {
+  margin: 0 0 3px 6px;
+  padding: 5px;
+  border: 2px solid #959DA0;
+  border-radius: 5px;
+  cursor: pointer;
+  color: #565F7C;
+  font-weight: bold;
+}
+
+
+
+@media(max-width:425px) {
+  .container {
+    width: 96vw;
+    padding: 20px 10px;
+  }
+
+  .clear {
+    margin-top: 12px;
+  }
+
+  .footer {
+    flex-direction: column;
+  }
 }
